--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,80 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-11 19:54:53 -0400 
+%% Created for Pete Su at 2023-08-11 20:06:45 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Jacobson1995,
+	author = {Ted Jacobson},
+	date-added = {2023-08-11 20:06:40 -0400},
+	date-modified = {2023-08-11 20:06:43 -0400},
+	doi = {10.1103/physrevlett.75.1260},
+	journal = {Phys. Rev. Lett.},
+	note = {\href{http://arxiv.org/abs/gr-qc/9504004v2}{arxiv:gr-qc/9504004v2}},
+	number = {7},
+	pages = {1260--1263},
+	publisher = {American Physical Society ({APS})},
+	title = {Thermodynamics of Spacetime: The Einstein Equation of State},
+	url = {https://doi.org/10.1103%2Fphysrevlett.75.1260},
+	volume = {75},
+	year = 1995,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevlett.75.1260},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevlett.75.1260}}
+
+@article{Jacobson1996a,
+	author = {Jacobson, Ted},
+	date-added = {2023-08-11 20:05:29 -0400},
+	date-modified = {2023-08-11 20:05:36 -0400},
+	journal = {Institute for Theoretical Physics University of Utrecht},
+	title = {Introductory lectures on black hole thermodynamics},
+	year = {1996}}
+
+@article{Jacobson1996,
+	author = {Ted Jacobson},
+	date-added = {2023-08-11 20:04:19 -0400},
+	date-modified = {2023-08-11 20:04:21 -0400},
+	doi = {10.1103/physrevd.53.7082},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/hep-th/9601064v2}{arxiv:hep-th/9601064v2}},
+	number = {12},
+	pages = {7082--7088},
+	publisher = {American Physical Society ({APS})},
+	title = {On the origin of the outgoing black hole modes},
+	url = {https://doi.org/10.1103%2Fphysrevd.53.7082},
+	volume = {53},
+	year = 1996,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.53.7082},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.53.7082}}
+
+@inproceedings{Jacobson1999,
+	author = {Ted Jacobson},
+	booktitle = {Eighth Canadian conference on general relativity and relativistic astrophysics},
+	date-added = {2023-08-11 20:03:10 -0400},
+	date-modified = {2023-08-11 20:03:16 -0400},
+	doi = {10.1063/1.1301569},
+	note = {\href{http://arxiv.org/abs/gr-qc/9908031v2}{arxiv:gr-qc/9908031v2}},
+	publisher = {{ASCE}},
+	title = {On the nature of black hole entropy},
+	url = {https://doi.org/10.1063%2F1.1301569},
+	year = 1999,
+	bdsk-url-1 = {https://doi.org/10.1063%2F1.1301569},
+	bdsk-url-2 = {https://doi.org/10.1063/1.1301569}}
+
+@incollection{Jacobson2005,
+	author = {Jacobson, Ted},
+	booktitle = {{Lectures on quantum gravity. Proceedings, School of Quantum Gravity, Valdivia, Chile, January 4-14, 2002}},
+	date-added = {2023-08-11 19:58:37 -0400},
+	date-modified = {2023-08-11 20:00:21 -0400},
+	doi = {10.1007/0-387-24992-3_2},
+	note = {\href{https://arxiv.org/abs/gr-qc/0308048}{arxiv:gr-qc/0308048}},
+	pages = {39--89},
+	publisher = {Springer},
+	title = {Introduction to quantum fields in curved spacetime and the Hawking effect},
+	year = {2005}}
 
 @article{Jacobson2012,
 	author = {Ted Jacobson},
@@ -9025,22 +9093,6 @@ horizon.},
 	note = {{\href{http://graduierten-kurse.physi.uni-heidelberg.de/SoSe2006/lectures/Heidelberg_2006_presentations/Winitzki.pdf}{Winitzki.pdf}}},
 	title = {{Elementary Introduction to Quantum Fields in Curved Spacetime}},
 	year = {2006}}
-
-@inproceedings{Jacobson2003,
-	archiveprefix = {arXiv},
-	author = {Jacobson, Ted},
-	booktitle = {{Lectures on quantum gravity. Proceedings, School of Quantum Gravity, Valdivia, Chile, January 4-14, 2002}},
-	date-added = {2019-02-10 22:16:48 +0000},
-	date-modified = {2023-08-08 07:31:24 -0400},
-	doi = {10.1007/0-387-24992-3_2},
-	eprint = {gr-qc/0308048},
-	note = {{\href{https://arxiv.org/abs/gr-qc/0308048v3}{arxiv:gr-qc/0308048v3}}},
-	pages = {39-89},
-	primaryclass = {gr-qc},
-	slaccitation = {%%CITATION = GR-QC/0308048;%%},
-	title = {{Introduction to quantum fields in curved space-time and the Hawking effect}},
-	year = {2003},
-	bdsk-url-1 = {https://doi.org/10.1007/0-387-24992-3_2}}
 
 @article{Church:1936,
 	author = {Alonzo Church},
