--- a/hep-th-9303103v1/hep-th-9303103v1.tex
+++ b/hep-th-9303103v1/hep-th-9303103v1.tex
@@ -10,6 +10,7 @@
 %%% process with Latex
 
 \documentclass[12pt]{article}
+\usepackage{graphicx}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 %\usepackage[noBBpl,sc]{mathpazo}
@@ -90,11 +91,11 @@ University of California, Santa Barbara, CA 93106}
 \date{March, 1993}
 \maketitle
 
-\vspace{-12cm}
+\vspace{-11cm}
 \begin{flushright}
 UMDGR93-32\\NSF-ITP-93-26\\hep-th/9303103
 \end{flushright}
-\vspace{10cm}
+\vspace{9cm}
 
 \begin{abstract}
 A derivation of the Hawking effect is given which avoids
@@ -300,6 +301,13 @@ Since both the wavepackets and the field operator satisfy
 the wave equation,
 the KG inner products in (\ref{2.4}) are conserved, and can
 therefore be evaluated on any Cauchy hypersurface.
+
+\begin{figure}[ht]
+\center{\includegraphics[height=2.5in]{fig1.png}}
+\caption{ Conformal diagram depicting wavefronts of the
+wavepacket $P=R+T$ propagating in the spacetime of a
+spherically symmetric collapsing body.}
+\end{figure}
 
 Because of time translation invariance in the part of the
 spacetime exterior to the matter, the reflected packet $R$
@@ -1795,6 +1803,7 @@ these two are related, using the geometrical optics
 approximation to propagate the very high frequency modes in
 question back out to $\pastI$.
 
+
 Consider a collection of null surfaces, wavefronts for such a mode.
 In Fig. 2 one surface is shown that is outgoing at
 retarded time $u$ and ingoing at advanced time $v(u)$. The
@@ -1816,6 +1825,16 @@ $r$-frequency part of $t_{\obar\ubar}$ at $v=v_c$ propagates
 back to the negative $v$-frequency part at $\pastI$. Thus
 the corresponding KG norms are identical, so in both cases
 we can carry out the calculation at $v=v_c$.
+
+\begin{figure}[ht]
+\center{\includegraphics[height=2.5in]{fig2.png}}
+\caption{Conformal diagram depicting the propagation of a wavefront.
+The point $(v_c, r(u,v_c))$ is connected by a radial null geodesic
+to a point on $\pastI$ at advanced time $v(u)$. The affine parameter
+$r$ along the line $v=v_c$ is linearly related to $v(u)$ for late
+retarded times $u$.}
+\end{figure}
+
 
 Now there is an observation \cite{Notes,Wald75} that makes the
 extraction of the negative frequency part simple: let
