--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 07:26:33 -0400 
+%% Created for Pete Su at 2023-08-12 07:37:31 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{Kiefer2003,
+	author = {Claus Kiefer},
+	booktitle = {Black Holes: Theory and Observation},
+	date-added = {2023-08-12 07:37:27 -0400},
+	date-modified = {2023-08-12 07:37:29 -0400},
+	doi = {10.1007/978-3-540-49535-2_20},
+	note = {\href{http://arxiv.org/abs/gr-qc/9803049v2}{arxiv:gr-qc/9803049v2}},
+	pages = {416--450},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Towards a Full Quantum Theory of Black Holes},
+	url = {https://doi.org/10.1007%2F978-3-540-49535-2_20},
+	year = 2003,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-540-49535-2_20},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-540-49535-2_20}}
+
+@article{Kattemolle2016,
+	author = {Kattem{\"o}lle, Joris and Freivogel, Ben and Schoutens, Kareljan},
+	date-added = {2023-08-12 07:32:40 -0400},
+	date-modified = {2023-08-12 07:32:42 -0400},
+	title = {MSc Physics Theoretical Physics Master Thesis},
+	year = {2016}}
 
 @article{Kattemlle2017,
 	author = {Joris Kattem\"olle and Ben Freivogel},
