--- a/gr-qc-9803049/gr-qc-9803049.tex
+++ b/gr-qc-9803049/gr-qc-9803049.tex
@@ -1,5 +1,79 @@
 % 14.4.1998
-\documentstyle{lamuphys}
+\documentclass[12pt]{article}
+
+\def\D{{\rm d}}
+\def\E{{\rm e}}
+\let\eul=\E
+\def\I{{\rm i}}
+\let\imag=\I
+\def\sun{\hbox{$\odot$}}
+\def\bbbr{{\rm I\!R}} %reelle Zahlen
+\def\bbbm{{\rm I\!M}}
+\def\bbbn{{\rm I\!N}} %natuerliche Zahlen
+\def\bbbf{{\rm I\!F}}
+\def\bbbh{{\rm I\!H}}
+\def\bbbk{{\rm I\!K}}
+\def\bbbp{{\rm I\!P}}
+\def\ga{\mathrel{\mathchoice {\vcenter{\offinterlineskip\halign{\hfil
+$\displaystyle##$\hfil\cr>\cr\sim\cr}}}
+{\vcenter{\offinterlineskip\halign{\hfil$\textstyle##$\hfil\cr
+>\cr\sim\cr}}}
+{\vcenter{\offinterlineskip\halign{\hfil$\scriptstyle##$\hfil\cr
+>\cr\sim\cr}}}
+{\vcenter{\offinterlineskip\halign{\hfil$\scriptscriptstyle##$\hfil\cr
+>\cr\sim\cr}}}}}
+\def\degr{\hbox{$^\circ$}}
+\def\arcmin{\hbox{$^\prime$}}
+\def\arcsec{\hbox{$^{\prime\prime}$}}
+\def\utw{\smash{\rlap{\lower5pt\hbox{$\sim$}}}}
+\def\udtw{\smash{\rlap{\lower6pt\hbox{$\approx$}}}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+%\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \makeatletter
 \let\chapter\hid@chapter
 \makeatother
@@ -15,10 +89,11 @@
 \pagenumbering{arabic}
 \title{Towards a Full Quantum Theory of Black Holes}
 
-\author{Claus\,Kiefer}
-
-\institute{Fakult\"at f\"ur Physik, Universit\"at Freiburg,
+\author{Claus\,Kiefer \\
+Fakult\"at f\"ur Physik, Universit\"at Freiburg,\\
 Hermann-Herder-Stra\ss e 3, D-79104 Freiburg, Germany}
+
+\date{15 Apr 1998}
 
 \maketitle
 
@@ -140,7 +215,6 @@ Table~1. (In the proof the validity of the weak energy condition
 for matter in a neighbourhood of the apparent horizon was used.)
 
 \vskip 2mm
-\small
 
 $S\to 0$ as $T\to 0$ is very helpful in thermodynamics,
 since it allows one to determine the entropy from measurements
@@ -1661,9 +1735,9 @@ manuscript.
 %
 % ---- Bibliography ----
 %
-\begin{thebibliography}
+\begin{thebibliography}{999}
 %
-\bibitem{}{}{}
+\bibitem
 Ashtekar, A. (1997): Polymer geometry at Planck scale and quantum
 Einstein equations. In {\it General Relativity and Gravitation},
 edited by M. Francaviglia, G. Longhi, L. Lusanna, and E. Sorace
