--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 07:37:31 -0400 
+%% Created for Pete Su at 2023-08-12 07:56:49 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kiefer2013,
+	author = {Claus Kiefer},
+	date-added = {2023-08-12 07:56:39 -0400},
+	date-modified = {2023-08-12 07:56:41 -0400},
+	doi = {10.1155/2013/509316},
+	journal = {ISRN Mathematical Physics},
+	note = {\href{http://arxiv.org/abs/1401.3578v1}{arxiv:1401.3578v1}},
+	pages = {1--17},
+	publisher = {Hindawi Limited},
+	title = {Conceptual Problems in Quantum Gravity and Quantum Cosmology},
+	url = {https://doi.org/10.1155%2F2013%2F509316},
+	volume = {2013},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1155%2F2013%2F509316},
+	bdsk-url-2 = {https://doi.org/10.1155/2013/509316}}
 
 @incollection{Kiefer2003,
 	author = {Claus Kiefer},
