--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 07:56:49 -0400 
+%% Created for Pete Su at 2023-08-12 08:04:05 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kim2017,
+	author = {Wontae Kim},
+	date-added = {2023-08-12 08:03:51 -0400},
+	date-modified = {2023-08-12 08:03:53 -0400},
+	doi = {10.1007/s10714-016-2179-2},
+	journal = {Gen Relativ Gravit},
+	note = {\href{http://arxiv.org/abs/1604.00465v4}{arxiv:1604.00465v4}},
+	number = {2},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Origin of Hawking radiation: firewall or atmosphere?},
+	url = {https://doi.org/10.1007%2Fs10714-016-2179-2},
+	volume = {49},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs10714-016-2179-2},
+	bdsk-url-2 = {https://doi.org/10.1007/s10714-016-2179-2}}
 
 @article{Kiefer2013,
 	author = {Claus Kiefer},
