--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 08:08:13 -0400 
+%% Created for Pete Su at 2023-08-12 11:03:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kitaev2019,
+	author = {Alexei Kitaev and S. Josephine Suh},
+	date-added = {2023-08-12 11:02:54 -0400},
+	date-modified = {2023-08-12 11:02:56 -0400},
+	doi = {10.1007/jhep05(2019)198},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1808.07032v2}{arxiv:1808.07032v2}},
+	number = {5},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Statistical mechanics of a two-dimensional black hole},
+	url = {https://doi.org/10.1007%2Fjhep05%282019%29198},
+	volume = {2019},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep05%282019%29198},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep05(2019)198}}
 
 @article{Kim2017,
 	author = {Wontae Kim},
@@ -6899,11 +6915,11 @@
 	year = {2011},
 	bdsk-url-1 = {https://doi.org/10.1007/978-3-642-12821-9_2}}
 
-@article{Kent:2014yga,
+@article{Kent2015,
 	archiveprefix = {arXiv},
 	author = {Kent, Adrian},
 	date-added = {2019-09-12 07:42:22 -0400},
-	date-modified = {2019-09-12 07:44:33 -0400},
+	date-modified = {2023-08-12 10:59:34 -0400},
 	doi = {10.1007/s10701-014-9862-5},
 	eprint = {1408.1944},
 	journal = {Found. Phys.},
