--- a/1711.08467/soft_mode.tex
+++ b/1711.08467/soft_mode.tex
@@ -40,7 +40,7 @@ bookmarksopenlevel=10
 %---- Page setup ----
 
 
-\usepackage[papersize={7.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 
 %---- Figures in equations ----
 
