--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 11:03:00 -0400 
+%% Created for Pete Su at 2023-08-12 11:05:21 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kitaev2018,
+	author = {Alexei Kitaev and S. Josephine Suh},
+	date-added = {2023-08-12 11:05:17 -0400},
+	date-modified = {2023-08-12 11:05:19 -0400},
+	doi = {10.1007/jhep05(2018)183},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1711.08467v5}{arxiv:1711.08467v5}},
+	number = {5},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The soft mode in the Sachdev-Ye-Kitaev model and its gravity dual},
+	url = {https://doi.org/10.1007%2Fjhep05%282018%29183},
+	volume = {2018},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep05%282018%29183},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep05(2018)183}}
 
 @article{Kitaev2019,
 	author = {Alexei Kitaev and S. Josephine Suh},
