--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 11:05:21 -0400 
+%% Created for Pete Su at 2023-08-12 11:23:21 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Lambert2014,
+	author = {Pierre-Henry Lambert},
+	booktitle = {Proceedings of Ninth Modave Summer School in Mathematical Physics {\textemdash} {PoS}(Modave 2013)},
+	date-added = {2023-08-12 11:21:10 -0400},
+	date-modified = {2023-08-12 11:21:47 -0400},
+	doi = {10.22323/1.201.0001},
+	note = {\href{https://arxiv.org/abs/1310.8312}{arxiv:1310.8312}},
+	publisher = {Sissa Medialab},
+	title = {Introduction to Black Hole evaporation},
+	url = {https://doi.org/10.22323%2F1.201.0001},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.22323%2F1.201.0001},
+	bdsk-url-2 = {https://doi.org/10.22323/1.201.0001}}
+
+@article{Kulkarni2019,
+	author = {Kulkarni, Rohan},
+	date-added = {2023-08-12 11:18:52 -0400},
+	date-modified = {2023-08-12 11:22:02 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1911.06608}{arxiv:1911.06608}},
+	title = {Black holes, Singularity theorems and The Global structure of Spacetime},
+	year = {2019}}
+
+@misc{Parzygnat2014,
+	author = {Arthur Parzygnat},
+	date-added = {2023-08-12 11:17:11 -0400},
+	date-modified = {2023-08-12 11:17:57 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://arthurparzygnat.com/wp-content/uploads/2014/12/Kruskel_Szekeres_Penrose.pdf}{PDF}},
+	title = {Kruskel-Szekeres coordinates and Penrose diagrams},
+	year = {2014}}
 
 @article{Kitaev2018,
 	author = {Alexei Kitaev and S. Josephine Suh},
@@ -8081,12 +8113,12 @@
 	year = {2007},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevA.76.052110}}
 
-@incollection{KNUTH1980197,
+@incollection{Knuth1980,
 	address = {San Diego},
-	author = {DONALD E. KNUTH and LUIS TRABB PARDO},
+	author = {Donald E. Knuth and LUIS TRABB PARDO},
 	booktitle = {A History of Computing in the Twentieth Century},
 	date-added = {2019-04-13 08:00:01 -0400},
-	date-modified = {2019-04-13 08:01:02 -0400},
+	date-modified = {2023-08-12 11:17:00 -0400},
 	doi = {https://doi.org/10.1016/B978-0-12-491650-0.50019-8},
 	editor = {N. METROPOLIS and J. HOWLETT and GIAN-CARLO ROTA},
 	isbn = {978-0-12-491650-0},
