--- a/1308.4209/final-state-firewall-v6.tex
+++ b/1308.4209/final-state-firewall-v6.tex
@@ -3,10 +3,53 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 %\input{epsf}
-\setlength{\topmargin}{-0.5truein}
-\setlength{\oddsidemargin}{0truein}
-\setlength{\textheight}{9truein}
-\setlength{\textwidth}{6.5truein}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 \begin{document}
 \title{\bf Unitarity of black hole evaporation in final-state
@@ -23,6 +66,8 @@ John Preskill\\
 Almheiri {\em et al.} have emphasized that otherwise reasonable beliefs about black hole evaporation are incompatible with the monogamy of quantum entanglement, a general property of quantum mechanics. We investigate the final-state projection model of black hole evaporation proposed by Horowitz and Maldacena, pointing out that this model admits cloning of quantum states and polygamous entanglement, allowing unitarity of the evaporation process to be reconciled with smoothness of the black hole event horizon. Though the model seems to require carefully tuned dynamics to ensure exact unitarity of the black hole S-matrix, for a generic final-state boundary condition the deviations from unitarity are exponentially small in the black hole entropy; furthermore observers inside black holes need not detect any deviations from standard quantum mechanics.  Though measurements performed inside old black holes could potentially produce causality-violating phenomena, the computational complexity of decoding the Hawking radiation may render the causality violation unobservable. Final-state projection models illustrate how inviolable principles of standard quantum mechanics might be circumvented in a theory of quantum gravity.
 \end{abstract}
 
+\newpage
+
 \section{Introduction}
 
 The quantum physics of black holes has caused great puzzlement since Stephen Hawking discovered \cite{hawking1} nearly 40 years ago that black holes evaporate. The crux of the puzzle is this: if a pure quantum state collapses to form a black hole, the geometry of the evaporating black hole contains spacelike surfaces crossed by both the collapsing body inside the event horizon and nearly all of the emitted Hawking radiation outside the event horizon. If this process is unitary, then the quantum information encoded in the collapsing matter must also be encoded (perhaps in a highly scrambled form) in the outgoing radiation; hence the infalling quantum state is {\em cloned} in the radiation, violating the linearity of quantum mechanics.
@@ -35,7 +80,8 @@ Black hole complementarity seeks to reconcile three reasonable beliefs: (1) An e
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.4\textwidth]{amps.pdf}
-\end{center}\caption{The AMPS puzzle: An infalling observer, while still a safe distance from the singularity, is in causal contact with each of the systems $A$, $B$, and $R_B$. If $B$ were highly entangled with both $A$ and $R_B$, the observer should be able to verify the violation of entanglement monogamy.}
+\end{center}
+\caption{The AMPS puzzle: An infalling observer, while still a safe distance from the singularity, is in causal contact with each of the systems $A$, $B$, and $R_B$. If $B$ were highly entangled with both $A$ and $R_B$, the observer should be able to verify the violation of entanglement monogamy.}
 \label{fig:amps}
 \end{figure}
 
@@ -59,7 +105,8 @@ Even if it turns out that the HM model is not realized in nature, the model is s
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{teleport.pdf}
-\end{center}\caption{Quantum teleportation. To convey a quantum state $|\psi\rangle$ of system $A$ to system $C$, first a maximally entangled state $|\Phi(V)\rangle$ of $BC$ is prepared, and then $AB$ is projected to a maximally entangled state $|\Phi(U^*)\rangle$. To recover $|\psi\rangle$, a party at $C$ applies the unitary transformation $U^\dagger V^\dagger$.}
+\end{center}
+\caption{Quantum teleportation. To convey a quantum state $|\psi\rangle$ of system $A$ to system $C$, first a maximally entangled state $|\Phi(V)\rangle$ of $BC$ is prepared, and then $AB$ is projected to a maximally entangled state $|\Phi(U^*)\rangle$. To recover $|\psi\rangle$, a party at $C$ applies the unitary transformation $U^\dagger V^\dagger$.}
 \label{fig:teleport}
 \end{figure}
 
@@ -73,7 +120,8 @@ Connections between the AMPS puzzle and the HM model have also been discussed in
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{penrose.pdf}
-\end{center}\caption{The Horowitz-Maldacena model, in which quantum information carried by the collapsing matter system $M$ is teleported out of a black hole. Outgoing Hawking radiation is maximally entangled with infalling radiation, and a final-state boundary condition projects $M$ and the infalling radiation to a maximally entangled state which encodes the unitary S-matrix $S$.  }
+\end{center}
+\caption{The Horowitz-Maldacena model, in which quantum information carried by the collapsing matter system $M$ is teleported out of a black hole. Outgoing Hawking radiation is maximally entangled with infalling radiation, and a final-state boundary condition projects $M$ and the infalling radiation to a maximally entangled state which encodes the unitary S-matrix $S$.  }
 \label{fig:penrose}
 \end{figure}
 
@@ -106,7 +154,8 @@ As Fig.~\ref{fig:penrose} indicates, the HM model supports a characteristic flow
 \begin{figure}
 \begin{center}
 \includegraphics[width=0.7\textwidth]{feed.pdf}
-\end{center}\caption{Information flow for a black hole that maintains its mass by accreting a steady stream of infalling matter.}
+\end{center}
+\caption{Information flow for a black hole that maintains its mass by accreting a steady stream of infalling matter.}
 \label{fig:feed}
 \end{figure}
 
@@ -124,7 +173,8 @@ Now, following AMPS \cite{amps,ampss}, we consider the case of an ``old''  black
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{transfer.pdf}
-\end{center}\caption{(a) An old black hole is maximally entangled with system $R$ in the previously emitted Hawking radiation. After the black hole emits the Hawking quanta $B$, $R$ is entangled with $B$ and no longer entangled with the black hole. (b) Entanglement transfer in the HM model. $AB$ and $HR$ are maximally entangled Unruh vacuum states. The final-state projection of $HA$ onto a maximally entangled state creates maximal entanglement of $BR$ via entanglement swapping.}
+\end{center}
+\caption{(a) An old black hole is maximally entangled with system $R$ in the previously emitted Hawking radiation. After the black hole emits the Hawking quanta $B$, $R$ is entangled with $B$ and no longer entangled with the black hole. (b) Entanglement transfer in the HM model. $AB$ and $HR$ are maximally entangled Unruh vacuum states. The final-state projection of $HA$ onto a maximally entangled state creates maximal entanglement of $BR$ via entanglement swapping.}
 \label{fig:transfer}
 \end{figure}
 
@@ -147,7 +197,8 @@ Assuming $|\mathcal{H}_{\rm in}| = |\mathcal{H}_{\rm out}| = d$ (where $|\mathca
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.5\textwidth]{entangling.pdf}
-\end{center}\caption{Entangling interactions between the infalling radiation and the collapsing matter (a), or between the infalling radiation and the outgoing radiation (b), may compromise the fidelity of postselected teleportation.}
+\end{center}
+\caption{Entangling interactions between the infalling radiation and the collapsing matter (a), or between the infalling radiation and the outgoing radiation (b), may compromise the fidelity of postselected teleportation.}
 \label{fig:entangling}
 \end{figure}
 
@@ -176,7 +227,8 @@ here $\|\cdot\|_1$ denotes the $L^1$-norm, $dU$ is the normalized Haar measure o
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.3\textwidth]{generic.pdf}
-\end{center}\caption{The HM model for a generic final-state boundary condition. Subsystem $M_1$ of the collapsing matter system $M$ is maximally entangled with a reference system $N_1$, and $\mathcal{H}_{M}\otimes \mathcal{H}_{\rm in}$ is projected onto a Haar-random state determined by the unitary transformation $U$. In the resulting postselected state, $N_1$ is very nearly maximally entangled with a subsystem of the outgoing Hawking radiation.}
+\end{center}
+\caption{The HM model for a generic final-state boundary condition. Subsystem $M_1$ of the collapsing matter system $M$ is maximally entangled with a reference system $N_1$, and $\mathcal{H}_{M}\otimes \mathcal{H}_{\rm in}$ is projected onto a Haar-random state determined by the unitary transformation $U$. In the resulting postselected state, $N_1$ is very nearly maximally entangled with a subsystem of the outgoing Hawking radiation.}
 \label{fig:generic}
 \end{figure}
 
@@ -194,7 +246,8 @@ Entangling interactions of $\mathcal{H}_M$ and  $\mathcal{H}_{\rm in}$ could be 
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.3\textwidth]{discard.pdf}
-\end{center}\caption{The collapsing matter subsystem $M_1$ is maximally entangled with a subsystem of the infalling radiation system $\mathcal{H}_{\rm in}$, specified by the scrambling unitary transformation $S$. If the subsystem $\mathcal{H}_{{\rm in}2}$ of $\mathcal{H}_{\rm in}$ is discarded, then the complementary subsystem $\mathcal{H}_{{\rm in}1}$ becomes nearly uncorrelated with $M_1$, if $\mathcal{H}_{{\rm in}2}$ is larger than half the size of $\mathcal{H}_{M_1}\otimes \mathcal{H}_{\rm in}$.}
+\end{center}
+\caption{The collapsing matter subsystem $M_1$ is maximally entangled with a subsystem of the infalling radiation system $\mathcal{H}_{\rm in}$, specified by the scrambling unitary transformation $S$. If the subsystem $\mathcal{H}_{{\rm in}2}$ of $\mathcal{H}_{\rm in}$ is discarded, then the complementary subsystem $\mathcal{H}_{{\rm in}1}$ becomes nearly uncorrelated with $M_1$, if $\mathcal{H}_{{\rm in}2}$ is larger than half the size of $\mathcal{H}_{M_1}\otimes \mathcal{H}_{\rm in}$.}
 \label{fig:discard}
 \end{figure}
 
@@ -230,7 +283,8 @@ It seems that either point of view --- (1) that measurements performed inside bl
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{inside-measure.pdf}
-\end{center}\caption{Measurement of the infalling Hawking radiation inside a black hole. The meter used in the measurement interacts with the measured system behind the horizon; then the meter is teleported out of the black hole. In the equivalent causally order process, the unitary interaction $U$ between system and meter is replaced by its partial transpose $U^{\rm PT}$.}
+\end{center}
+\caption{Measurement of the infalling Hawking radiation inside a black hole. The meter used in the measurement interacts with the measured system behind the horizon; then the meter is teleported out of the black hole. In the equivalent causally order process, the unitary interaction $U$ between system and meter is replaced by its partial transpose $U^{\rm PT}$.}
 \label{fig:inside-measure}
 \end{figure}
 
@@ -258,7 +312,8 @@ We also wish to consider measurements which straddle the black hole horizon. In 
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.3\textwidth]{straddle-measure.pdf}
-\end{center}\caption{A measurement straddling the black hole horizon. From the meter's perspective the interaction $U_1$ occurs first and is followed by $U_2$, while from the perspective of the radiation the interactions occur in the opposite order. }
+\end{center}
+\caption{A measurement straddling the black hole horizon. From the meter's perspective the interaction $U_1$ occurs first and is followed by $U_2$, while from the perspective of the radiation the interactions occur in the opposite order. }
 \label{fig:straddle-measure}
 \end{figure}
 
@@ -270,7 +325,8 @@ Even if the S-matrix relating the asymptotic infalling matter to the asymptotic 
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{acausal.pdf}
-\end{center}\caption{(a) A measurement inside a young black hole may influence the Hawking radiation outside, but the effect of the measurement is not immediately detectable. (b) A measurement inside an old black hole modifies the state of $BR$ outside the horizon.}
+\end{center}
+\caption{(a) A measurement inside a young black hole may influence the Hawking radiation outside, but the effect of the measurement is not immediately detectable. (b) A measurement inside an old black hole modifies the state of $BR$ outside the horizon.}
 \label{fig:acausal}
 \end{figure}
 
@@ -306,7 +362,8 @@ $Z\otimes Z$ is the ``parity bit'' of the qubit pair, distinguishing the strings
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.7\textwidth]{bell-meas.pdf}
-\end{center}\caption{Quantum circuit for measuring a qubit pair in the maximally entangled Bell basis. In the circuit on the left, the measurement of $Z\otimes Z$ is performed first, followed by the measurement of $X\otimes X$. In the equivalent circuit on the right, the meter interacts first with one of the two measured qubits, then with the other. This latter circuit may be used by an infalling agent to verify entanglement that straddles a black hole event horizon.}
+\end{center}
+\caption{Quantum circuit for measuring a qubit pair in the maximally entangled Bell basis. In the circuit on the left, the measurement of $Z\otimes Z$ is performed first, followed by the measurement of $X\otimes X$. In the equivalent circuit on the right, the meter interacts first with one of the two measured qubits, then with the other. This latter circuit may be used by an infalling agent to verify entanglement that straddles a black hole event horizon.}
 \label{fig:bell-meas}
 \end{figure}
 
@@ -327,7 +384,8 @@ Now we will discuss entanglement-verifying measurements performed on an old blac
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{brenda-first.pdf}
-\end{center}\caption{Entanglement verifying measurements for an old black hole. In the circuit on the left, BRenda measures $Z_B\otimes Z_R$ before ABby measures $X_A\otimes X_B$. (ABby performs her measurement by interacting with $B$ outside the horizon first, then falling into the black hole to interact with $A$ inside the horizon later.) In the equivalent circuit on the right, ABby measures before BRenda, and there is an additional CNOT gate from ABby's meter to BRenda's.}
+\end{center}
+\caption{Entanglement verifying measurements for an old black hole. In the circuit on the left, BRenda measures $Z_B\otimes Z_R$ before ABby measures $X_A\otimes X_B$. (ABby performs her measurement by interacting with $B$ outside the horizon first, then falling into the black hole to interact with $A$ inside the horizon later.) In the equivalent circuit on the right, ABby measures before BRenda, and there is an additional CNOT gate from ABby's meter to BRenda's.}
 \label{fig:brenda-first}
 \end{figure}
 
@@ -343,7 +401,8 @@ If both BRenda and ABby measure, then both must interact with $B$. Provided ABby
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{cnot-identity.pdf}
-\end{center}\caption{The quantum circuit identity used to establish the equivalence of the two circuits shown in Fig.~\ref{fig:brenda-first}.}
+\end{center}
+\caption{The quantum circuit identity used to establish the equivalence of the two circuits shown in Fig.~\ref{fig:brenda-first}.}
 \label{fig:cnot-identity}
 \end{figure}
 
@@ -356,7 +415,8 @@ How should we interpret this failure? Has the system measured by each party been
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.5\textwidth]{decode-ghz.pdf}
-\end{center}\caption{If ABby measures $X_A\otimes X_B$ four times after BRenda measures $Z_B\otimes Z_R$ once, the measurements are completed by performing CNOT gates from each of ABby's meter qubits to BRenda's meter qubit, before measuring ABby's qubits in the $X$ basis and BRenda's qubits in the $Z$ basis.}
+\end{center}
+\caption{If ABby measures $X_A\otimes X_B$ four times after BRenda measures $Z_B\otimes Z_R$ once, the measurements are completed by performing CNOT gates from each of ABby's meter qubits to BRenda's meter qubit, before measuring ABby's qubits in the $X$ basis and BRenda's qubits in the $Z$ basis.}
 \label{fig:decode-ghz}
 \end{figure}
 
@@ -373,7 +433,8 @@ This discussion requires only minor modification when both BRenda and ABby perfo
 \begin{figure}[t]
 \begin{center}
 \includegraphics[width=0.4\textwidth]{decode-full-bell.pdf}
-\end{center}\caption{If ABby performs a complete Bell measurement after BRenda performs a complete Bell measurement, the measurements are completed by performing this circuit on ABby's and BRenda's meters.}
+\end{center}
+\caption{If ABby performs a complete Bell measurement after BRenda performs a complete Bell measurement, the measurements are completed by performing this circuit on ABby's and BRenda's meters.}
 \label{fig:decode-full-bell}
 \end{figure}
 
@@ -456,7 +517,7 @@ Phys, Rev. Lett. 110, 101301 (2013).
 \bibitem{horowitz} G.~T. Horowitz and J. Maldacena, The black hole final state, JHEP 0402:008 (2004), arXiv:hep-th/0310281 (2003).
 \bibitem{wootters} W.~K. Wootters and W.~H. Zurek, A single quantum cannot be cloned, Nature 299, 802-803 (1982).
 \bibitem{dieks} D. Dieks, Communication by EPR devices, Physics Letters A 92, 271-272 (1982).
-\bibitem{hartle-hawking} J.~B. Hartle and S.~W. Hawking, Wave function of the universe, Phys. Rev. D 28, 2960–2975 (1983).
+\bibitem{hartle-hawking} J.~B. Hartle and S.~W. Hawking, Wave function of the universe, Phys. Rev. D 28, 2960--2975 (1983).
 \bibitem{gottesman} D. Gottesman and J. Preskill, Comment on ``The black hole final state,'' JHEP 0403:026 (2004), arXiv:hep-th/0311269.
 \bibitem{lloyd} S. Lloyd, Almost certain escape from black holes in final state projection models, Phys. Rev. Lett. 96, 061302 (2006), arXiv:quant-ph/0406205.
 \bibitem{aharonov} Y. Aharonov, D.~Z. Albert, and L. Vaidman, How the result of a measurement of a component of the spin of a spin-1/2 particle can turn out to be 100, Phys. Rev. Lett. 60, 1351 (1988).
@@ -467,11 +528,11 @@ Phys, Rev. Lett. 110, 101301 (2013).
 %%
 \bibitem{bousso-stanford} R. Bousso and D. Stanford, Measurements without probabilities in the final state proposal, Phys. Rev. D 89, 044038 (2014), arXiv:1310.7457.
 \bibitem{rangamani} M. Rangamani and M. Rota, Quantum channels in quantum gravity, arXiv:1405.4710 (2014).
-\bibitem{teleportation} C.~H. Bennett, G. Brassard, C. Cr\'epeau, R. Jozsa, A. Peres, and W.~K. Wootters, Teleporting an unknown quantum state via dual classical and Einstein-Podolsky-Rosen channels, Phys. Rev. Lett. 70, 1895–1899 (1993).
+\bibitem{teleportation} C.~H. Bennett, G. Brassard, C. Cr\'epeau, R. Jozsa, A. Peres, and W.~K. Wootters, Teleporting an unknown quantum state via dual classical and Einstein-Podolsky-Rosen channels, Phys. Rev. Lett. 70, 1895--1899 (1993).
 \bibitem{poisson} E. Poisson and W. Israel, Inner structure of black holes, Phys. Rev. D41, 1796-1809 (1990).
 \bibitem{sekino} Y. Sekino and L. Susskind, Fast scramblers, JHEP0810:065 (2008), arXiv:0808.2096.
-\bibitem{swapping1} M. Zukowski, A. Zeilinger, M.~A. Horne, and A.~K. Ekert, ''Event-ready-detectors'' Bell experiment via entanglement swapping, Phys. Rev. Lett. 71, 4287–4290 (1993).
-\bibitem{swapping2} S. Bose, V. Vedral, and P.~L. Knight, Multiparticle generalization of entanglement swapping, Phys. Rev. A 57, 822–829 (1998), arXiv:quant-ph/9708004.
+\bibitem{swapping1} M. Zukowski, A. Zeilinger, M.~A. Horne, and A.~K. Ekert, ''Event-ready-detectors'' Bell experiment via entanglement swapping, Phys. Rev. Lett. 71, 4287--4290 (1993).
+\bibitem{swapping2} S. Bose, V. Vedral, and P.~L. Knight, Multiparticle generalization of entanglement swapping, Phys. Rev. A 57, 822--829 (1998), arXiv:quant-ph/9708004.
 \bibitem{marolf} D. Marolf and J. Polchinski, Gauge/gravity duality and the black hole interior, arXiv:1307.4706 (2013).
 \bibitem{decoupling} P. Hayden, M. Horodecki, A. Winter, and J. Yard, A decoupling approach to the quantum capacity, Open Syst. Inf. Dyn. 15, 7 (2008), arXiv:quant-ph/0702005.
 \bibitem{cleve} C. Dankert, R. Cleve, J. Emerson, and E. Livine, Exact and approximate unitary 2-designs: constructions and applications, Phys. Rev. A 80, 012304 (2009), arXiv:quant-ph/0606161.
